--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "puppeteer": "^7.1.0"
+    "puppeteer": "^7.1.0",
+    "validator": "^13.5.2"
   }
 }
